--- a/pom.xml
+++ b/pom.xml
@@ -1,41 +1,41 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
-  <groupId>com.github.jitpack</groupId>
-  <artifactId>maven-simple</artifactId>
-  <version>0.2-SNAPSHOT</version>
-  <packaging>jar</packaging>
-
-  <name>Simple Maven example</name>
-  <url>https://jitpack.io/#jitpack/maven-simple/0.1</url>
-
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   
-  <build>
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.10.1</version> <!-- Use a more recent version of the plugin -->
-            <configuration>
-                <!-- Compile for Java 21 -->
-                <source>21</source>
-                <target>21</target>
-            </configuration>
-        </plugin>
-    </plugins>
-</build>
-      
-      <plugin>  <!-- Create sources.jar -->
-            <groupId>org.apache.maven.plugins</groupId>
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>com.github.jitpack</groupId>
+    <artifactId>maven-simple</artifactId>
+    <version>0.2-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
+    <name>Simple Maven example</name>
+    <url>https://jitpack.io/#jitpack/maven-simple/0.1</url>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+  
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version> <!-- Use a more recent version of the plugin -->
+                <configuration>
+                    <!-- Compile for Java 21 -->
+                    <source>21</source>
+                    <target>21</target>
+                </configuration>
+            </plugin>
+            
+            <plugin> <!-- Create sources.jar -->
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
                 <executions>
                     <execution>
@@ -45,9 +45,9 @@
                         </goals>
                     </execution>
                 </executions>
-      </plugin>
+            </plugin>
             
-      <plugin>
+            <plugin> <!-- Generate Javadocs -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <executions>
@@ -58,8 +58,8 @@
                         </goals>
                     </execution>
                 </executions>
-      </plugin>
-    </plugins>
-  </build>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
